# can_stethoscope

./: .gitignore  README.md  importAnalog.py  pyproject.toml  requirements.txt  setup.cfg
logic_analyzer_data/: 2Vpp-square.txt  3Vpp_sweep2.txt
raw_can_data/: convert_raw_data.py  rename_split_files.py  split_raw_files.py
src/can_stethoscope/: __init__.py  cli.py  conversions.py  data_processor.py  data_storage.py  file_manager.py  main.py  rise_time_analysis.py
src/can_stethoscope/references/: can_frame.py  can_helpers.py
tests/: test_can_frame.py
