[metadata]
name = can_stethoscope
version = 0.0.1
author = "Emerson Maki, Jamison Jangula, Eric Pierce, Patrick Mubiayi"
author_email = "makix222@gmail.com, jamisonjangula@gmail.com, epierce137@gmail.com, patrick.mubs007@gmail.com"
description = Troubleshooting tools used to detect key measurements in the analog values of a CAN bus.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamisonjangula/canbus

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src